完善了面积图，只显示主会场和分会场的信息

--- a/index.html
+++ b/index.html
@@ -83,7 +83,12 @@
         background: green;
         width: 655px;
       }
-      canvas {
+      #canvas {
+        margin-top:3px;
+        border: 3px solid rgb(170, 170, 170);width:600px;height:300px
+      }
+
+      #canvas2 {
         margin-top:3px;
         border: 3px solid rgb(170, 170, 170);width:600px;height:300px
       }
@@ -115,7 +120,7 @@
                 <div id="main-nav" class='row'>
                     <button type="button" id="btn-grids" class="btn btn-info">grids</button>
                     <button type="button" id="btn-bubbles" class="btn btn-info">bubbles</button>
-                    <!-- <button type="button" id="btn-areas" class="btn btn-info">areas</button> -->
+                    <button type="button" id="btn-areas" class="btn btn-info">areas</button>
                     <!-- <button type="button" id="btn-parallelSet" class="btn btn-info">parallel set</button> -->
                     <button type="button" id="btn-parallelCoord" class="btn btn-info">parallel coord</button>
                     <button type="button" id="btn-boxplot" class="btn btn-info">box plot</button>
